--- a/css/main.dev.css
+++ b/css/main.dev.css
@@ -1,4 +1,4 @@
-.test {
-  margin: 0; }
+.cloud-diagram {
+  border: 1px solid red; }
 
-/*# sourceMappingURL=data:application/json;charset=utf8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbIl9kaWFncmFtLnNjc3MiXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IkFBQUE7RUFDQyxVQUFVLEVBQ1YiLCJmaWxlIjoibWFpbi5jc3MiLCJzb3VyY2VzQ29udGVudCI6WyIudGVzdCB7XHJcblx0bWFyZ2luOiAwO1xyXG59XHJcbiJdfQ== */
+/*# sourceMappingURL=data:application/json;charset=utf8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbIl9kaWFncmFtLnNjc3MiXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IkFBQUE7RUFDQyxzQkFBc0IsRUFDdEIiLCJmaWxlIjoibWFpbi5jc3MiLCJzb3VyY2VzQ29udGVudCI6WyIuY2xvdWQtZGlhZ3JhbSB7XHJcblx0Ym9yZGVyOiAxcHggc29saWQgcmVkO1xyXG59Il19 */
