--- a/sass/_diagram.scss
+++ b/sass/_diagram.scss
@@ -1,3 +1,19 @@
 .cloud-diagram {
+	width: 100%;
+	max-width: 1000px;
 	border: 1px solid red;
+
+	svg * {
+		pointer-events: none;
+	}
+}
+
+.cloud-diagram__item {
+	pointer-events: all !important;
+	cursor: pointer;
+
+	&:hover, &:focus {
+		fill: red;
+		opacity: 1;
+	}
 }
