--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,1 +1,8 @@
+@import "vars";
+
+// Vendor Includes
+@import 'vendor/bourbon';
+@import 'vendor/include-media';
+@import 'vendor/tooltipster';
+
 @import "diagram";
