--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -1,2 +1,6 @@
+$color--white: #fff;
 $color--green: #82bc41;
 $color--gray: #7f8386;
+$color--off-white: #e1e9eb;
+$color--dark-blue: #0c2d4d;
+$color--blue: #0675c1;
